# mockgician

./: .gitignore  DOCS.md  Dockerfile  Makefile  README.md  init-db.sql  package-lock.json  pyproject.toml  requirements.txt
app/: config.py  init_db.py  main.py  pytest.ini
app/db/: crud.py  engine.py
app/models/: service.py  user.py
app/routes/: _handle_service.py  create_service.py  delete_services.py  get_inputs.py  get_service_by_id.py  get_services.py  static.py  token.py  update_service.py
app/services/: handle_services.py
app/tests/: test_get_dictionaries.py
app/tests/decorators/: build_headers.py
app/utils/: auth.py  custom_exceptions.py  data_base_manager.py  get_user_from_db.py  load_test_data.py
ui/: package-lock.json  package.json
ui/src/: index.css
ui/src/components/App/: App.css  App.js
ui/src/components/DynamicInputFields/: DynamicInputFields.js
ui/src/components/Editor/: Editor.css  Editor.js
ui/src/components/Footer/: Footer.css  Footer.js
ui/src/components/Header/: Header.css  Header.js
ui/src/components/Main/: Main.js
ui/src/components/Popup/: Popup.css  Popup.js
ui/src/components/ProtectedRoute/: ProtectedRoute.js
ui/src/components/SearchForm/: SearchForm.css  SearchForm.js
ui/src/components/ServiceCard/: ServiceCard.css  ServiceCard.js
ui/src/components/ServiceCreateForm/: ServiceCreateForm.css  ServiceCreateForm.js
ui/src/components/ServiceUpdateForm/: ServiceUpdateForm.css  ServiceUpdateForm.js
ui/src/fonts/: fonts.css
ui/src/hooks/: useForm.js  useSigninForm.js
ui/src/utils/: AuthApi.js  MainApi.js
(+4 files in other folders)
